hadled the users not part of grop